# samples

./: .gitignore  README.md
cpp/: .gitignore
cpp/hello-world/: CMakeLists.txt  Dockerfile
cpp/persistent-volume/: CMakeLists.txt  Dockerfile  main.cpp
cpp/simple-server/: CMakeLists.txt  Dockerfile  main.cpp
cpp/sqlite-persistence/: CMakeLists.txt  Dockerfile  main.cpp
hello-pytorch/: .dockerignore  README.md
node-typescript/hello-world/: package.json
node-typescript/persistent-volume/: Dockerfile  package-lock.json  package.json  wendy.json
node-typescript/simple-server/: Dockerfile  package.json
node-typescript/sqlite-persistence/: Dockerfile  package-lock.json  package.json  wendy.json
node-typescript/web-app/: Dockerfile  wendy.json
python/VoiceAssistant/: .gitignore  DOCKER.md  Dockerfile  GPU_SETUP.md  README.md  check_gpu.py  docker-compose.jetson.yml  install_jetson.sh  run-jetson.sh  wendy_assistant.py
python/bluetooth-discovery/: Dockerfile  app.py  index.html  requirements.txt  wendy.json
python/hello-pytorch/: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu-slim  Dockerfile.jetson-slim  README-JETSON.md  main.py  pyproject.toml
python/hello-world/: .gitignore  Dockerfile  app.py  wendy.json
python/hello_world/: Dockerfile  app.py  entrypoint.sh
python/nemotron-speech-asr/: Dockerfile  app.py  index.html  wendy.json
python/persistent-volume/: app.py  wendy.json
python/simple-server/: Dockerfile  (+1 more)
rust/: .gitignore
rust/web-app/server/: .gitignore  Cargo.toml
rust/web-app/server/src/: main.rs
swift/: Package.resolved
(+103 files in other folders)
